--- a/api/core/pyproject.toml
+++ b/api/core/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.4",
+    "django-cors-headers>=4.7.0",
+    "djangorestframework>=3.16.0",
 ]
