--- a/web/app/package.json
+++ b/web/app/package.json
@@ -10,9 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.2.6",
+    "@lexical/react": "^0.33.1",
+    "@lexical/utils": "^0.33.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "feather-icons": "^4.29.2",
+    "formik": "^2.4.6",
+    "lexical": "^0.33.1",
+    "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.7.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -21,6 +33,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "daisyui": "^5.0.50",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
