--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -13,11 +13,10 @@ services:
       labels:
         - traefik.enable=true
         - traefik.http.routers.engineering_test.rule=Host(`engineering.cd.godjango.dev`)
-        - traefik.http.routers.engineering_test.entrypoints=websecure
-        - traefik.http.routers.engineering_test.priority=1
-        - traefik.http.routers.engineering_test.tls.certresolver=letsencryptresolver
+        - traefik.http.routers.engineering_test.entrypoints=web, websecure
         - traefik.http.services.engineering_test.loadbalancer.server.port=4173
         - traefik.http.services.engineering_test.loadbalancer.passHostHeader=true
+        - traefik.docker.network=traefik
     environment:
       - VITE_BACKEND_URL=https://engineering.cd.godjango.dev/
     networks:
