--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
+      - db_volume:/app/database/
     networks:
       - traefik
   engineering_backend_statics:
@@ -52,6 +53,7 @@ services:
 volumes:
   static_volume:
   media_volume:
+  db_volume:
   # redis_data: # TODO
   # celerybeat_schedule: # TODO
 
